--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <link rel="icon" href="images/mobile-logo.png"  />
+    <link rel="icon" href="images/mobile-logo.svg"  />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
