--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       }(window.location))
     </script>
 
-    <title>U-Secured</title>
+    <title>Your safety zone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
