--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,12 @@
           );
         }
       }(window.location))
-    </script>
+    </script>-->
 
     <title>Your safety zone</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
